@@ -1,3 +1,8 @@
+2007-11-02  Donal K. Fellows  <dkf@users.sf.net>
+
+	* library/demos/mclist.tcl: Added a demo of how to do a multi-column
+	sortable listbox.
+
 2007-11-02  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	* library/msgbox.tcl: Made message dialog use Ttk widgets for better
